// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list os items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas running shoes - women",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas running shoes - men",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart summary() should return an object with the total and the list the items when summary is called 1`] = `
{
  "formatted": "R$1,963.92",
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas running shoes - women",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas running shoes - men",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 196392,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
